--- a/package.json
+++ b/package.json
@@ -8,20 +8,25 @@
     "@testing-library/user-event": "^13.5.0",
     "jquery": "^3.6.3",
     "moment": "^2.29.4",
+    "or": "^0.2.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-full-page": "^0.1.12",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://moon12-3.github.io/pages/",
   "eslintConfig": {
     "extends": [
       "react-app",
