이미지가 안나와 도와줘 미친

--- a/src/db/project.json
+++ b/src/db/project.json
@@ -32,7 +32,7 @@
             "thumbDes": "쓰레기섬을 모험하며 각종 변수들을 이겨내는 게임입니다.",
             "des": "2022년 STAC 공모전에 아이디어/엔터테이먼트로 참가한 아이디어입니다. 쓰레기섬을 모험하며 각종 변수들을 이겨내는 게임입니다.",
             "info": "",
-            "img": "/mirim-mas/static/media/MAS SUB PICTURE.1ac9a48f9582654e5259.png"
+            "img": "../img/logo.png"
         },
         {
             "id": "2",
@@ -42,7 +42,7 @@
             "thumbDes": "신사리 상권의 마티스 커피를 홍보하는 웹사이트입니다.",
             "des": "관악구 별빛신사리 상권 진흥회에서 주최한 상권 활성화 공모전으로 마티스 커피를 홍보하여 최우수상을 거둬낸 웹사이트입니다.",
             "info": "",
-            "img": "../../components/img/logo.png"
+            "img": ""
         },
         {
             "id": "2",
@@ -52,7 +52,7 @@
             "thumbDes": "프랑스와 이탈리아를 여행할 때 유용하게 활용할 수 있는 웹사이트입니다.",
             "des": "겨울방학에 간단하게 동아리 내부에서 진행한 팀 프로젝트로 코로나 규제 완화에 따른 여행 홍보 웹사이트를 제작하였습니다.",
             "info": "",
-            "img": "../../components/img/logo.png"
+            "img": ""
         },
         {
             "id": "2",
@@ -62,7 +62,7 @@
             "thumbDes": "동물원의 동물을 살펴보아요~",
             "des": "겨울방학에 간단하게 동아리 내부에서 진행한 팀 프로젝트로 동물원의 동물을 살펴볼 수 있는 웹사이트를 제작하였습니다.",
             "info": "",
-            "img": "../../components/img/logo.png"
+            "img": ""
         },
         {
             "id": "2",
@@ -72,7 +72,7 @@
             "thumbDes": "퀴즈에 나오는 인물을 맞춰보세요!",
             "des": "겨울방학에 간단하게 동아리 내부에서 진행한 팀 프로젝트로 퀴즈에 나오는 인물을 맞춰보는 게임을 제작하였습니다.",
             "info": "",
-            "img": "../../components/img/logo.png"
+            "img": ""
         },
         {
             "id": "3",
